--- a/service.html
+++ b/service.html
@@ -64,19 +64,11 @@
     .cta a{display:inline-block;padding:12px 28px;background:#1976d2;color:#fff;border-radius:8px;text-decoration:none}
   </style>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
-<script>
-  window.dataLayer = window.dataLayer or [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-ZHLJ5K19ZE');
-</script>
-
   <style>
 #service-page /* index_part1.txtのCSSをそのまま利用 */
-    :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}}#service-page *{box-sizing:border-box}}#service-page a{color:inherit;text-decoration:none}}#service-page main{min-height:40vh;}}#service-page .container{max-width:var(--container);margin:0 auto;padding:0 16px}}#service-page .hfbar{display:flex;align-items:center;gap:var(--gap);width:100%;padding:8px 0}}#service-page .slot{display:flex;align-items:center}}#service-page .slot.brand{flex:0 0 auto}}#service-page .slot.nav{flex:1 1 auto}}#service-page .hamburger{display:none;appearance:none;border:1px solid #111;background:#fff;color:#111;cursor:pointer;padding:8px;border-radius:10px;box-shadow:0 1px 2px rgba(0,0,0,.12)}}#service-page .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}}#service-page .drawer{position:fixed;inset:0;pointer-events:none}}#service-page .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}}#service-page .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}}#service-page .drawer[aria-hidden="false"]{pointer-events:auto}}#service-page .drawer[aria-hidden="false"] .overlay{opacity:1}}#service-page .drawer[aria-hidden="false"] .panel{transform:none}}#service-page .drawer .panel header{padding:14px 16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}}#service-page .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}}#service-page .drawer .panel nav a{padding:12px 10px;border-radius:10px}}#service-page .drawer .panel nav a:hover{background:#f1f5f9}}
-@media (max-width:768px){#service-page .container{padding:0 12px}}:root{--container:100%}}#service-page .slot.nav{display:none}}#service-page .hamburger{display:block;margin-left:auto}}}
+    :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}}#service-page *{box-sizing:border-box}}#service-page{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff;line-height:1.7}}#service-page a{color:inherit;text-decoration:none}}#service-page main{min-height:40vh;}}#service-page .container{max-width:var(--container);margin:0 auto;padding:0 16px}}#service-page .hfbar{display:flex;align-items:center;gap:var(--gap);width:100%;padding:8px 0}}#service-page .slot{display:flex;align-items:center}}#service-page .slot.brand{flex:0 0 auto}}#service-page .slot.nav{flex:1 1 auto}}#service-page .hamburger{display:none;appearance:none;border:1px solid #111;background:#fff;color:#111;cursor:pointer;padding:8px;border-radius:10px;box-shadow:0 1px 2px rgba(0,0,0,.12)}}#service-page .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}}#service-page .drawer{position:fixed;inset:0;pointer-events:none}}#service-page .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}}#service-page .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}}#service-page .drawer[aria-hidden="false"]{pointer-events:auto}}#service-page .drawer[aria-hidden="false"] .overlay{opacity:1}}#service-page .drawer[aria-hidden="false"] .panel{transform:none}}#service-page .drawer .panel header{padding:14px 16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}}#service-page .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}}#service-page .drawer .panel nav a{padding:12px 10px;border-radius:10px}}#service-page .drawer .panel nav a:hover{background:#f1f5f9}
+@media (max-width:768px){
+      .container{padding:0 12px}#service-page{--container:100%}}#service-page .slot.nav{display:none}}#service-page .hamburger{display:block;margin-left:auto}}
 #service-page /* ページ共通スタイル */
     section{margin:80px auto}}#service-page h2, #service-page h3{margin:0 0 20px;font-weight:700}}#service-page h2{font-size:32px;text-align:center;color:#1976d2;margin-bottom:10px}}#service-page h3{font-size:24px;text-align:center;color:#0f172a;margin-bottom:40px}}#service-page p{margin:0 0 16px}}#service-page /* LP共通のセクションタイトルスタイル */
     .lp-section-title{font-size: 38px;
@@ -90,7 +82,7 @@
         text-align: center;
         margin-bottom: 40px;
         position: relative;
-        padding-bottom: 10px;}}#service-page .lp-section-subtitle::after{content: '';
+        }}#service-page .lp-section-subtitle::after{content: '';
         display: block;
         width: 80px;
         height: 3px;
@@ -125,7 +117,7 @@
         padding: 10px 20px;
         border-radius: 8px;
         margin-top: 40px;
-        animation: pulse 1.5s infinite;}}#service-page @keyframes pulse{0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(254, 240, 138, 0.7);}}#service-page 70%{transform: scale(1.02); box-shadow: 0 0 0 15px rgba(254, 240, 138, 0);}}#service-page 100%{transform: scale(1); box-shadow: 0 0 0 0 rgba(254, 240, 138, 0);}}#service-page /* CTA Button (Common) */
+        animation: pulse 1.5s infinite;}}@keyframes pulse{0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(254, 240, 138, 0.7);}}#service-page 70%{transform: scale(1.02); box-shadow: 0 0 0 15px rgba(254, 240, 138, 0);}}#service-page 100%{transform: scale(1); box-shadow: 0 0 0 0 rgba(254, 240, 138, 0);}}#service-page /* CTA Button (Common) */
     .cta-button{display: inline-block;
         background: #e91e63; /* Pink/Red for strong action */
         color: #fff;
@@ -327,9 +319,16 @@
         margin-bottom: 10px;
         color: #fff;}}#service-page #final-cta p{font-size: 18px;
         margin-bottom: 30px;
-        color: #e0f2fe;}}
-@media (max-width: 1024px) {#service-page #hero-title{font-size: 48px;}}#service-page .solution-content{gap: 30px;}}}
-@media (max-width: 768px) {#service-page section{margin: 60px auto;}}#service-page #hero{padding: 80px 0 60px;}}#service-page #hero-title{font-size: 40px;}}#service-page #hero-subtitle{font-size: 20px;}}#service-page .hero-catch{font-size: 24px;}}#service-page .lp-section-title{font-size: 30px;}}#service-page .lp-section-subtitle{font-size: 18px;}}#service-page /* Problem */
+        color: #e0f2fe;}
+@media (max-width: 1024px) {
+        #hero-title {
+            font-size: 48px;
+        }#service-page .solution-content{gap: 30px;}}
+
+@media (max-width: 768px) {
+        section {
+            margin: 60px auto;
+        }#service-page #hero{padding: 80px 0 60px;}}#service-page #hero-title{font-size: 40px;}}#service-page #hero-subtitle{font-size: 20px;}}#service-page .hero-catch{font-size: 24px;}}#service-page .lp-section-title{font-size: 30px;}}#service-page .lp-section-subtitle{font-size: 18px;}}#service-page /* Problem */
         .problem-cards{grid-template-columns: 1fr;
             gap: 20px;}}#service-page /* Solution */
         .solution-content{flex-direction: column;
@@ -357,7 +356,7 @@
             right: 50%;
             top: auto;
             bottom: -20px;
-            transform: translateX(50%);}}#service-page .step-number{margin-bottom: 25px; /* 矢印分のスペース */}}#service-page .step-item h4{margin-bottom: 5px;}}}
+            transform: translateX(50%);}}#service-page .step-number{margin-bottom: 25px; /* 矢印分のスペース */}}#service-page .step-item h4{margin-bottom: 5px;}}
   </style>
 </head>
 <body>
