--- a/index.html
+++ b/index.html
@@ -124,9 +124,63 @@
   
   <header id="site-header" class="hf-wrap"></header>
 
-  <main id="app-root">
-    <!-- コンテンツはJavaScriptで挿入されます -->
-  </main>
+  
+<main id="app-root">
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="carousel">
+      <div class="slide active"><img src="images/hero1.jpg" alt="Hero 1"></div>
+      <div class="slide"><img src="images/hero2.jpg" alt="Hero 2"></div>
+      <div class="slide"><img src="images/hero3.jpg" alt="Hero 3"></div>
+    </div>
+  </section>
+
+  <!-- News Section -->
+  <section id="news">
+    <h2>お知らせ</h2>
+    <ul>
+      <li><a href="#">ニュース1</a></li>
+      <li><a href="#">ニュース2</a></li>
+      <li><a href="#">ニュース3</a></li>
+    </ul>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>会社概要</h2>
+    <p>弊社は…（ここに会社概要の説明が入ります）</p>
+  </section>
+
+  <!-- Service Section -->
+  <section id="service">
+    <h2>事業内容</h2>
+    <p>弊社の事業内容は…（ここに説明が入ります）</p>
+  </section>
+
+  <!-- YouTube Section -->
+  <section id="youtube">
+    <h2>動画紹介</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xxxxx" frameborder="0" allowfullscreen></iframe>
+  </section>
+
+  <!-- SNS Section -->
+  <section id="sns">
+    <h2>SNS</h2>
+    <ul>
+      <li><a href="https://twitter.com/">X</a></li>
+      <li><a href="https://facebook.com/">Facebook</a></li>
+      <li><a href="https://instagram.com/">Instagram</a></li>
+    </ul>
+  </section>
+
+  <!-- Company Info Section -->
+  <section id="company-info">
+    <h2>会社情報</h2>
+    <p>所在地: 神戸市…<br>代表: ○○</p>
+    <p><a href="/contact.html">お問い合わせはこちら</a></p>
+  </section>
+</main>
+
 
   <footer id="site-footer" class="hf-wrap"></footer>
 
